...
enum MenuMessage: String {
    case requestStart = "開始日と開始地点を設定"
    case requestFinish = "目的地を設定"
    case edit = "経路の編集"
    case infoRoute = "目的地"
    case finish = "目的地に到着しました"
    case infoFinished = "完了"
    case infoInterrupted = "中断"
}

enum AnnotationColor {
    static let done = UIColor(_colorLiteralRed: 0.8, green: 0, blue: 0, alpha: 1.0)
    static let yet = UIColor(_colorLiteralRed: 0, green: 0, blue: 1, alpha: 1.0)
...
        CLLocationCoordinate2D(latitude:34.98568120000001, longitude: 135.7589936),
        CLLocationCoordinate2D(latitude:34.687093000000004, longitude: 135.52575900000002),
    ]
    let labels = [
        "東京都千代田区丸の内1丁目",
        "静岡県静岡市葵区黒金町",
        "愛知県名古屋市中区",
        "京都府京都市中京区一之船入町",
        "大阪府大阪市中央区平野町3丁目",
    ]

    func initialize(completion: @escaping () -> Void) {
        let args = CommandLine.arguments
        print("args=\(args)")
        if args.contains("-uistorytest") {
...
